<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context="com.devpekka.jsonpart.Photoshop3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageV_2"
            android:layout_width="300sp"
            android:layout_height="200sp"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_margin="3sp"/>

        <ImageView
            android:id="@+id/imageV_2_2"
            android:layout_width="300sp"
            android:layout_height="200sp"
            android:layout_below="@id/imageV_2"
            android:layout_centerHorizontal="true"
            android:layout_margin="3sp" />


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/HowTo1"
            android:textAlignment="center"
            android:textColor="#3f3f3f"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageV_2_2"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/introText1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/first1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/second2" />

        <ImageView
            android:id="@+id/imageV_4_2"
            android:layout_width="450sp"
            android:layout_height="300sp"
            android:layout_margin="5sp"
            android:layout_below="@id/textView4"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageV_4_2"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/Third"/>

        <ImageView
            android:id="@+id/imageV_5_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageV_5_2"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/thePre_end"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/the_end2"/>


    </RelativeLayout>

</ScrollView>
