<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context="com.devpekka.jsonpart.Photoshop">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="How to make simple 3D Text in photoshop"
            android:textAlignment="center"
            android:textColor="#3f3f3f"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageV"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/inThis" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/Material" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/Material1" />

        <ImageView
            android:id="@+id/mat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_margin="7sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mat1"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/Material2" />

        <ImageView
            android:id="@+id/mat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_margin="7sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mat2"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/Material3" />

        <ImageView
            android:id="@+id/mat3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_margin="7sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mat3"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/Material4" />

        <ImageView
            android:id="@+id/mat4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView7"
            android:layout_centerHorizontal="true"
            android:layout_margin="7sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mat4"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/Material5" />

        <ImageView
            android:id="@+id/mat5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView8"
            android:layout_centerHorizontal="true"
            android:layout_margin="7sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mat5"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/Material6" />

        <ImageView
            android:id="@+id/mat6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView9"
            android:layout_centerHorizontal="true"
            android:layout_margin="7sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mat6"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/Material7" />

        <ImageView
            android:id="@+id/mat7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView10"
            android:layout_centerHorizontal="true"
            android:layout_margin="7sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mat7"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/Material8" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView11"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/Material9" />

        <ImageView
            android:id="@+id/mat8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView12"
            android:layout_centerHorizontal="true"
            android:layout_margin="7sp" />


    </RelativeLayout>

</ScrollView>
