<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context="com.devpekka.jsonpart.Photoshop2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageV_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/HowTo"
            android:textAlignment="center"
            android:textColor="#3f3f3f"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageV_2"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/introText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_margin="7sp"
            android:layout_marginBottom="3sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/first" />

        <ImageView
            android:id="@+id/imageV_3"
            android:layout_width="300sp"
            android:layout_height="200sp"
            android:layout_below="@id/textView3"
            android:layout_margin="3sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageV_3"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/second" />

        <ImageView
            android:id="@+id/imageV_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:layout_margin="3sp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageV_4"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="Now, let's take a look at the final image:"/>

        <ImageView
            android:id="@+id/imageV_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx"
            android:layout_margin="3sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageV_5"
            android:layout_margin="7sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/the_end"/>


    </RelativeLayout>

</ScrollView>
